--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML basics</title>
+        <title>HTMLDraftSite</title>
     </head>
     <body>
-
+<img src="https://lh4.googleusercontent.com/G91H4KbH_PmzwsTeW91i2a1NtNQAK6MJhAWuwU0V_v6E3yoxpZHj1MzelIistcj9XeKAgu22GXoWdSrOQTVo0ZRnp9NBEMpMsQ3y4jINiDqbN6KDVg2wyrD2XVjukKQ5f_WaPKTn" alt="CSC 106 The Joy of Program">
 
     </body>
 </html>
