--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     </head>
     <body>
 <img src="https://lh4.googleusercontent.com/G91H4KbH_PmzwsTeW91i2a1NtNQAK6MJhAWuwU0V_v6E3yoxpZHj1MzelIistcj9XeKAgu22GXoWdSrOQTVo0ZRnp9NBEMpMsQ3y4jINiDqbN6KDVg2wyrD2XVjukKQ5f_WaPKTn" alt="CSC 106 The Joy of Program">
-
+<table>
+    <thead>
+        <tr>
+            <td> <a target="_blank" href="http://home.web.cern.ch/topics/birth-web"> <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home"> </a> </td>
+            
+            
+    </thead>
+</table>
     </body>
 </html>
