--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 <table>
     <thead>
         <tr>
-            <td> <a target="_blank" href="http://home.web.cern.ch/topics/birth-web"> <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home"> </a> </td>
-            
+            <td> 
+                <a href="benmthomas-hub.github.io/index.html">
+                <p> 
+                <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home">
+                </p>
+                </a> 
+            </td>
+        </tr>    
             
     </thead>
 </table>
