--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <thead>
         <tr>
             <td> 
-                <a href="benmthomas-hub.github.io/index.html">
+                <a href="index.html">
                 <p> 
                 <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home">
                 </p>
