--- a/javascripts.html
+++ b/javascripts.html
@@ -2,10 +2,30 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML basics</title>
+        <title>HTMLDraftSite</title>
     </head>
     <body>
-
-
+<img src="https://lh4.googleusercontent.com/G91H4KbH_PmzwsTeW91i2a1NtNQAK6MJhAWuwU0V_v6E3yoxpZHj1MzelIistcj9XeKAgu22GXoWdSrOQTVo0ZRnp9NBEMpMsQ3y4jINiDqbN6KDVg2wyrD2XVjukKQ5f_WaPKTn" alt="CSC 106 The Joy of Program">
+<table>
+    <thead>
+        <tr>
+            <td> 
+                <a href="index.html">
+                <p> 
+                <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home">
+                </p>
+                </a> 
+            </td>
+            <td> 
+                <a href="javascripts.html">
+                <p> 
+                <img src="https://lh3.googleusercontent.com/uhBzfPtMee_mIsvfQDJr3-Jws01w_b2q9w7pfdV8c2QNSuYKzy973Goo_a46ctu9F3q_sAPZ29sjXIjEk0Y0dIGeYJnAsrHGzqu69sZVMjKXqqKuU38IaFFPMOBpaOlupDobmiDL" alt="javascripts">
+                </p>
+                </a> 
+            </td>
+        </tr>    
+            
+    </thead>
+</table>
     </body>
 </html>
