--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
                 </p>
                 </a> 
             </td>
+             <td> 
+                <a href="javascripts.html">
+                <p> 
+                <img src="https://lh3.googleusercontent.com/uhBzfPtMee_mIsvfQDJr3-Jws01w_b2q9w7pfdV8c2QNSuYKzy973Goo_a46ctu9F3q_sAPZ29sjXIjEk0Y0dIGeYJnAsrHGzqu69sZVMjKXqqKuU38IaFFPMOBpaOlupDobmiDL" alt="javascripts">
+                </p>
+                </a> 
+            </td>
         </tr>    
             
     </thead>
