--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
                 <p> 
                 <img src="https://lh3.googleusercontent.com/uhBzfPtMee_mIsvfQDJr3-Jws01w_b2q9w7pfdV8c2QNSuYKzy973Goo_a46ctu9F3q_sAPZ29sjXIjEk0Y0dIGeYJnAsrHGzqu69sZVMjKXqqKuU38IaFFPMOBpaOlupDobmiDL" alt="javascripts">
                 </p>
+                </a> apps.html
+            </td>
+            <td> 
+                <a href="apps.html">
+                <p> 
+                <img src="https://lh5.googleusercontent.com/fR4uXTRGhfwLkMiWKWkZgArH6bosEjj0QD__-smPWchHxFxFqU0RyUV_f_b4UYPoIAM77SJVdzCErHxRb3fedLZsigODm9B2fhROS5TGayfWxQO8SAuxZ77lcHMgRirrbfFw-P1r" alt="apps">
+                </p>
+                </a> 
+            </td>
+            <td> 
+                <a href="about.html">
+                <p> 
+                <img src="https://lh5.googleusercontent.com/EYrj8IR9DyNsFB51YSGE-kiSh9jAIHca6SOlOB-0QVNnr3RuND3Rtql260Sr1hUG7EXPeBJYfcbw10glDbsNZXLoQ2bycOS67J3G4jWWPXmzt9mTqE-PZtprTDX_37DEx0OHl_tG" alt="about me">
+                </p>
                 </a> 
             </td>
         </tr>    
