--- a/javascripts.html
+++ b/javascripts.html
@@ -23,6 +23,20 @@
                 </p>
                 </a> 
             </td>
+            <td> 
+                <a href="apps.html">
+                <p> 
+                <img src="https://lh5.googleusercontent.com/fR4uXTRGhfwLkMiWKWkZgArH6bosEjj0QD__-smPWchHxFxFqU0RyUV_f_b4UYPoIAM77SJVdzCErHxRb3fedLZsigODm9B2fhROS5TGayfWxQO8SAuxZ77lcHMgRirrbfFw-P1r" alt="apps">
+                </p>
+                </a> 
+            </td>
+            <td> 
+                <a href="about.html">
+                <p> 
+                <img src="https://lh5.googleusercontent.com/EYrj8IR9DyNsFB51YSGE-kiSh9jAIHca6SOlOB-0QVNnr3RuND3Rtql260Sr1hUG7EXPeBJYfcbw10glDbsNZXLoQ2bycOS67J3G4jWWPXmzt9mTqE-PZtprTDX_37DEx0OHl_tG" alt="about me">
+                </p>
+                </a> 
+            </td>
         </tr>    
             
     </thead>
