--- a/about.html
+++ b/about.html
@@ -15,8 +15,7 @@
                 <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home">
                 </p>
                 </a> 
-            </td>
-            <td>    </td>
+             </td>
              <td> 
                 <a href="javascripts.html">
                 <p> 
@@ -41,6 +40,12 @@
         </tr>    
             
     </thead>
-</table>
+    <tbody>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tbody>
+  </table>
     </body>
 </html>
