--- a/about.html
+++ b/about.html
@@ -6,31 +6,31 @@
     </head>
     <body>
 <img src="https://lh4.googleusercontent.com/G91H4KbH_PmzwsTeW91i2a1NtNQAK6MJhAWuwU0V_v6E3yoxpZHj1MzelIistcj9XeKAgu22GXoWdSrOQTVo0ZRnp9NBEMpMsQ3y4jINiDqbN6KDVg2wyrD2XVjukKQ5f_WaPKTn" alt="CSC 106 The Joy of Program">
-<table width="400">
+<table>
     <thead>
         <tr>
-            <td width="100px"> 
+            <td> 
                 <a href="index.html">
                 <p> 
                 <img src="https://lh6.googleusercontent.com/rz_DixfpnzN9iD8SpPN83QTyo_soodHa9OMVLRPtKK-MTXq5jCSTPPMLWaHlVKt9y2i53Jkfo4gq2tj25TSOpfXAkgHPibuzLR7p9hQdI0ejKQDFnAAJwOX6Q0c6-R5565tMcAqo" alt="home">
                 </p>
                 </a> 
              </td>
-             <td width="100"> 
+             <td> 
                 <a href="javascripts.html">
                 <p> 
                 <img src="https://lh3.googleusercontent.com/uhBzfPtMee_mIsvfQDJr3-Jws01w_b2q9w7pfdV8c2QNSuYKzy973Goo_a46ctu9F3q_sAPZ29sjXIjEk0Y0dIGeYJnAsrHGzqu69sZVMjKXqqKuU38IaFFPMOBpaOlupDobmiDL" alt="javascripts">
                 </p>
                 </a>
             </td>
-            <td width="100"> 
+            <td> 
                 <a href="apps.html">
                 <p> 
                 <img src="https://lh5.googleusercontent.com/fR4uXTRGhfwLkMiWKWkZgArH6bosEjj0QD__-smPWchHxFxFqU0RyUV_f_b4UYPoIAM77SJVdzCErHxRb3fedLZsigODm9B2fhROS5TGayfWxQO8SAuxZ77lcHMgRirrbfFw-P1r" alt="apps">
                 </p>
                 </a> 
             </td>
-            <td width="100"> 
+            <td> 
                 <a href="about.html">
                 <p> 
                 <img src="https://lh5.googleusercontent.com/EYrj8IR9DyNsFB51YSGE-kiSh9jAIHca6SOlOB-0QVNnr3RuND3Rtql260Sr1hUG7EXPeBJYfcbw10glDbsNZXLoQ2bycOS67J3G4jWWPXmzt9mTqE-PZtprTDX_37DEx0OHl_tG" alt="about me">
