--- a/index.html
+++ b/index.html
@@ -41,5 +41,7 @@
             
     </thead>
 </table>
+        <h1> Welcome to Benjamin's Programming Portfolio Website </h1>
+        
     </body>
 </html>
