--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </thead>
 </table>
         <h1> Welcome to Benjamin's Programming Portfolio Website </h1>
-        
+        <p> Hey! My name is Benjamin Thomas an this is my programming portfolio for CSC 106. All the programs written in this portfolio was written by yours truly for the CSC 106 The Joy of Programming sourse at the University of Rhode Island.
     </body>
 </html>
