--- a/javascripts.html
+++ b/javascripts.html
@@ -41,5 +41,7 @@
             
     </thead>
 </table>
+        <h1> Ben's Javascript Programs </h1>
+        <p> Hey! My name is Benjamin Thomas an this is my programming portfolio for CSC 106. All the programs written in this <br> portfolio was written by yours truly for the CSC 106 The Joy of Programming sourse at the University of Rhode Island.
     </body>
 </html>
