--- a/apps.html
+++ b/apps.html
@@ -42,6 +42,6 @@
     </thead>
 </table>
         <h1> Ben's Apps </h1>
-        <p> This page contains the apps for my programs. They are able to run in your browser on your device. </p>
+        <p> This page contains the apps for my programs. They are able to run in your browser on your device.
     </body>
 </html>
