--- a/javascripts.html
+++ b/javascripts.html
@@ -42,6 +42,6 @@
     </thead>
 </table>
         <h1> Ben's Javascript Programs </h1>
-        <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools from Khan Academy.
+        <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
     </body>
 </html>
