--- a/about.html
+++ b/about.html
@@ -42,7 +42,6 @@
   </table>
          <h1> About me </h1>
         <p> My name is Benjamin Thomas, I am part of the University of Rhode Island's class of 2024, and I am majoring in Computer <br> 
-            Science. As I usually spend my free time playing video games, I also enjoy playing soccer, football, and a few other sports <br>
-            here and there.
+            Science. As I usually spend my free time playing video games, I also enjoy playing soccer and football.
     </body>
 </html>
