--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </tr>     
     </thead>
   </table>
-         <h1> About me </h1>
+         <h1> About Me </h1>
         <p> My name is Benjamin Thomas, I am part of the University of Rhode Island's class of 2024, and I am majoring in Computer <br> 
             Science. As I usually spend my free time playing video games, I also enjoy playing soccer and football.
     </body>
