--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HTMLDraftSite</title>
     </head>
     <body>
-<img src="https://drive.google.com/file/d/1N_94zu9SNv9ogolWbEStdqQjMs7Jx9tT/view?usp=sharing" alt="CSC 106 The Joy of Program">
+<img src="Banner.jpg" alt="CSC 106 The Joy of Program">
 <table>
     <thead>
         <tr>
