--- a/javascripts.html
+++ b/javascripts.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>HTMLDraftSite</title>
+        <style>
+        body {
+            background-color: rgb(244, 184, 154);
+            }
+        </style>
     </head>
     <body>
 <img src="Banner.jpg" alt="CSC 106 The Joy of Program">
