--- a/javascripts.html
+++ b/javascripts.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-<img src="Banner.jpg" alt="CSC 106 The Joy of Program">
+<img src="Banner.jpg" alt="CSC 106 The Joy of Program" width="1000">
 <table>
     <thead>
         <tr>
