--- a/apps.html
+++ b/apps.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>HTMLDraftSite</title>
+<style>
+        body {
+            background-color: rgb(244, 184, 154);
+            }
+        </style>
     </head>
     <body>
-<img src="Banner.jpg" alt="CSC 106 The Joy of Program">
+<img src="Banner.jpg" alt="CSC 106 The Joy of Program" width="1550">
 <table>
     <thead>
         <tr>
