--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 <style>
         body {
             background-color: rgb(244, 184, 154);
+            background-image: url("paper.gif");
             }
         </style>
     </head>
