--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <style>
         body {
             background-color: rgb(244, 184, 154);
-            background-image: url("DOGGO.jpg");
+            background-image: url("IMG_2528 (1).jpg");
             }
         </style>
     </head>
@@ -47,7 +47,7 @@
     </thead>
   </table>
          <h1> About Me </h1>
-        <p> My name is Benjamin Thomas, I am part of the University of Rhode Island's class of 2024, and I am majoring in Computer <br> 
-            Science. As I usually spend my free time playing video games, I also enjoy playing soccer and football.
+        <p> My name is Benjamin Thomas, I am part of the University of Rhode <br> Island's class of 2024, and I am majoring in Computer <br> 
+            Science. As I usually spend my free time playing <br> video games, I also enjoy playing soccer and football.
     </body>
 </html>
