--- a/javascripts.html
+++ b/javascripts.html
@@ -47,5 +47,6 @@
 </table>
         <h1> Ben's Javascript Programs </h1>
         <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
+            <h2><a href="https://www.khanacademy.org/computer-programming/avatar/4648564930330624">Avatar</a></h2><script src="https://www.khanacademy.org/computer-programming/avatar/4648564930330624/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
