--- a/javascripts.html
+++ b/javascripts.html
@@ -48,5 +48,6 @@
         <h1> Ben's Javascript Programs </h1>
         <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
             <h2><a href="https://www.khanacademy.org/computer-programming/avatar/4648564930330624">Avatar</a></h2><script src="https://www.khanacademy.org/computer-programming/avatar/4648564930330624/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+            <h2><a href="https://www.khanacademy.org/computer-programming/dance/6275244996378624">Dance</a></h2><script src="https://www.khanacademy.org/computer-programming/dance/6275244996378624/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </body>
 </html>
