--- a/javascripts.html
+++ b/javascripts.html
@@ -47,8 +47,11 @@
 </table>
         <h1> Ben's Javascript Programs </h1>
         <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
-            <h2> <img src="bitmoji-cap.png">
-            <h2> <img src="bitmoji-dnce.png">
-            <h2> <img src="bitmoji-race.png">
+            <h2> <a href="https://www.khanacademy.org/computer-programming/bitmojijs/4648564930330624">
+                 <img src="bitmoji-cap.png">
+            <h2> <a href="https://www.khanacademy.org/computer-programming/dancing_bitmojijs/6275244996378624">
+                 <img src="bitmoji-dnce.png">
+            <h2> <a href="https://www.khanacademy.org/computer-programming/racing_bitmojijs/5043710234673152">
+                 <img src="bitmoji-race.png">
     </body>
 </html>
