--- a/javascripts.html
+++ b/javascripts.html
@@ -53,5 +53,9 @@
                  <img src="bitmoji-dnce.png">
             <h2> <a href="https://www.khanacademy.org/computer-programming/racing_bitmojijs/5043710234673152">
                  <img src="bitmoji-race.png">
+            <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_followjs/5356632036032512">
+                 <img src="follow.png">
+            <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_decision/5373938975850496">
+                 <img src="vaca.png">
     </body>
 </html>
