--- a/javascripts.html
+++ b/javascripts.html
@@ -57,5 +57,7 @@
                  <img src="follow.png">
             <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_decision/5373938975850496">
                  <img src="vaca.png">
+            <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_educationalapp/6369927274119168">
+                 <img src="edu.png">
     </body>
 </html>
