--- a/javascripts.html
+++ b/javascripts.html
@@ -47,17 +47,19 @@
 </table>
         <h1> Ben's Javascript Programs </h1>
         <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
-            <h2> <a href="https://www.khanacademy.org/computer-programming/bitmojijs/4648564930330624">
+                 <a href="https://www.khanacademy.org/computer-programming/bitmojijs/4648564930330624">
                  <img src="bitmoji-cap.png">
-            <h2> <a href="https://www.khanacademy.org/computer-programming/dancing_bitmojijs/6275244996378624">
+                 <a href="https://www.khanacademy.org/computer-programming/dancing_bitmojijs/6275244996378624">
                  <img src="bitmoji-dnce.png">
-            <h2> <a href="https://www.khanacademy.org/computer-programming/racing_bitmojijs/5043710234673152">
+                     <br>
+                 <a href="https://www.khanacademy.org/computer-programming/racing_bitmojijs/5043710234673152">
                  <img src="bitmoji-race.png">
-            <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_followjs/5356632036032512">
+                 <a href="https://www.khanacademy.org/computer-programming/thomas_followjs/5356632036032512">
                  <img src="follow.png">
-            <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_decision/5373938975850496">
+                     <br>
+                 <a href="https://www.khanacademy.org/computer-programming/thomas_decision/5373938975850496">
                  <img src="vaca.png">
-            <h2> <a href="https://www.khanacademy.org/computer-programming/thomas_educationalapp/6369927274119168">
+                 <a href="https://www.khanacademy.org/computer-programming/thomas_educationalapp/6369927274119168">
                  <img src="edu.png">
     </body>
 </html>
