--- a/javascripts.html
+++ b/javascripts.html
@@ -61,5 +61,7 @@
                  <img src="vaca.png">
                  <a href="https://www.khanacademy.org/computer-programming/thomas_educationalapp/6369927274119168">
                  <img src="edu.png">
+                 <a href="https://www.khanacademy.org/computer-programming/memory-gaem/6295428131405824">
+                 <img src="memory.png">
     </body>
 </html>
