--- a/javascripts.html
+++ b/javascripts.html
@@ -42,6 +42,13 @@
                 </p>
                 </a> 
             </td>
+            <td>
+                <a href="finalProject.html">
+                <p>
+                <img src="about (2).png" alt="about me">
+                </p>
+                </a> 
+            </td>
         </tr>    
     </thead>
 </table>
