--- a/finalProject.html
+++ b/finalProject.html
@@ -45,32 +45,16 @@
             <td>
                 <a href="finalProject.html">
                 <p>
-                <img src="about (2).png" alt="about me">
+                <img src="about (2).png" alt="My Final Project">
                 </p>
                 </a> 
             </td>
         </tr>    
     </thead>
 </table>
-        <h1> Ben's Javascript Programs </h1>
-        <p> This page contains the Javascript apps I had written in my CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
+        <h1> Ben's Final Project </h1>
+        <p> This page contains my final project for CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
                     <br>
-                 <a href="https://www.khanacademy.org/computer-programming/bitmojijs/4648564930330624">
-                 <img src="bitmoji-cap.png">
-                 <a href="https://www.khanacademy.org/computer-programming/dancing_bitmojijs/6275244996378624">
-                 <img src="bitmoji-dnce.png">
-                     <br>
-                 <a href="https://www.khanacademy.org/computer-programming/racing_bitmojijs/5043710234673152">
-                 <img src="bitmoji-race.png">
-                 <a href="https://www.khanacademy.org/computer-programming/thomas_followjs/5356632036032512">
-                 <img src="follow.png">
-                     <br>
-                 <a href="https://www.khanacademy.org/computer-programming/thomas_decision/5373938975850496">
-                 <img src="vaca.png">
-                 <a href="https://www.khanacademy.org/computer-programming/thomas_educationalapp/6369927274119168">
-                 <img src="edu.png">
-                     <br>
-                 <a href="https://www.khanacademy.org/computer-programming/memory-gaem/6295428131405824">
-                 <img src="memory.png">
+        <h2><a href="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024">Air Hockey FINAL PROJECT</a></h2><script src="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
     </body>
 </html
