--- a/finalProject.html
+++ b/finalProject.html
@@ -55,6 +55,6 @@
         <h1> Ben's Final Project </h1>
         <p> This page contains my final project for CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
                     <br>
-        <h2><a href="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024">Air Hockey FINAL PROJECT</a></h2><script src="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+        <h2><a href="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024">Air Hockey FINAL PROJECT</a></h2><script src="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html
