--- a/javascripts.html
+++ b/javascripts.html
@@ -45,7 +45,7 @@
             <td>
                 <a href="finalProject.html">
                 <p>
-                <img src="about (2).png" alt="My Final Project">
+                <img src="project (1).jpg" alt="My Final Project">
                 </p>
                 </a> 
             </td>
