--- a/apps.html
+++ b/apps.html
@@ -42,7 +42,13 @@
                 </p>
                 </a> 
             </td>
-            
+            <td>
+                <a href="finalProject.html">
+                <p>
+                <img src="project (1).jpg" alt="My Final Project">
+                </p>
+                </a> 
+            </td>
         </tr>    
     </thead>
 </table>
