--- a/finalProject.html
+++ b/finalProject.html
@@ -56,5 +56,6 @@
         <p> This page contains my final project for CSC 106 course in the University of Rhode Island using tools <br>from Khan Academy.
                     <br>
         <h2><a href="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024">Air Hockey FINAL PROJECT</a></h2><script src="https://www.khanacademy.org/computer-programming/air-hockey-final-project/6491175984513024/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://youtu.be/yD1mgnIvJlg"></h2>
     </body>
 </html
